# DeZensur

./: .coveragerc  .gitignore  CHANGELOG.md  README.md  dez.py  generate_report.py  models.yml  pyinstaller.spec  pyproject.toml  pytest.ini  requirements.txt  start.cmd  start.py
.github/workflows/: ci.yml  release.yml
core/: batch_runner.py  censor_detector.py  dep_manager.py  i18n.py  image_loader.py  inpainter.py  logger_setup.py  project.py  project_manager.py  prompt_helper.py  render_engine.py  report.py  segmenter.py  server_stub.py
demo_assets/blurred/: README.txt
demo_assets/unblurred/: README.txt
dezensor/: __init__.py  fetch_model.py
docs/: handbuch.md
gui/: babel.config.cjs  index.html  jest.config.cjs  main.py  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
gui/src/: App.jsx  (+3 more)
mockups/: backstage.html  front.html  styles.css
scripts/: build_windows_exe.py  extract_changelog.py  repair_gui.py  sync_i18n.py
tests/: __init__.py  controlnet_aux.py  diffusers.py  flask.py  huggingface_hub.py  loguru.py  onnxruntime.py  requests_stub.py  segment_anything.py  test_batch_runner.py  test_censor_detector.py  test_dep_manager.py  test_fetch_model_cli.py  test_generate_report_script.py  test_inpainter.py  test_logging.py  test_mask_editor.py  test_project_manager.py  test_prompt_helper.py  test_repair_gui.py  test_right_inspector.py  test_sanity.py  test_segmenter.py  test_segmenter_gpu_pipeline.py  test_segmenter_mobile_fallback.py  test_server_stub.py  test_settings_modal.py  test_start.py  torch.py
(+66 files in other folders)
